--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
 
     - name: Build android
       if: contains(matrix.platform.target, 'android')
-      run: cargo apk build --target ${{ matrix.platform.target }} build
+      run: cargo apk build --target ${{ matrix.platform.target }}
 
     - name: Rust tests
       if: matrix.platform.cross == false
